fixed searchfield/lookup/colorpicker field options on mobile -- #555

--- a/src/components/field-options/_field-options.scss
+++ b/src/components/field-options/_field-options.scss
@@ -70,7 +70,7 @@
     padding: 0 5px;
   }
 
-  &:hover {
+  &.visible {
     ~ .btn-actions {
       opacity: 1;
     }
@@ -288,12 +288,24 @@
       }
     }
   }
+
+  &.visible {
+    .btn-actions {
+      opacity: 1;
+    }
+  }
 }
 
 // Hover effect ================================================================
 .field.visible {
   .btn-actions {
     opacity: 1;
+  }
+
+  &.is-fieldoptions {
+    .btn-actions {
+      opacity: 1;
+    }
   }
 }
 
